feat: add security linting and enhance documentation for frontend strategy

--- a/chimera-fde/Makefile
+++ b/chimera-fde/Makefile
@@ -1,10 +1,13 @@
-.PHONY: setup test test-docker
+.PHONY: setup test test-docker security
 
 setup:
 	uv sync
 
 test:
 	uv run pytest tests/ -v
+
+security:
+	uv run bandit -r .
 
 test-docker:
 	docker build -t chimera-fde:dev .
